--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
     
 }
 .pokemonCard {
+    position: relative;
     border-radius: 10px;
     gap: 20px;
     width: 250px;
@@ -36,6 +37,24 @@ body {
     margin-top: 40px;
     margin-right: 10px;
 }
+.pokemonID {
+    position: absolute;
+    left: 200px;
+    top: 5px;
+    opacity: 10%;
+}
+.stackShort{
+    position: absolute;
+    left: 20px; 
+    top: 60px;
+    padding-left: 10px;
+    width: 60px;
+    height: 30px;
+    color: white;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.226);
+}
+
 /* Pokemon background */
 
 .fire {
