--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
     height: 150px;
     margin: 10px;
     background-color: gray;
+    box-shadow: 4px 4px 7px rgba(0, 0, 0, 0.438);
 }
 .pokemonCard h1 {
     color: white; 
@@ -54,6 +55,12 @@ body {
     border-radius: 10px;
     background-color: rgba(255, 255, 255, 0.226);
 }
+
+/* Mobile optik */
+@media(max-width: 20px) {
+
+}
+
 
 /* Pokemon background */
 
